--- a/Lucuber/Base.lproj/Main.storyboard
+++ b/Lucuber/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                         <segue destination="k94-hk-Vin" kind="relationship" relationship="viewControllers" id="qzo-6x-csk"/>
                         <segue destination="gCI-yF-HLj" kind="relationship" relationship="viewControllers" id="CT5-8m-xqp"/>
                         <segue destination="0bA-YL-9P3" kind="relationship" relationship="viewControllers" id="tXR-Z8-hMc"/>
-                        <segue destination="Xjb-3J-BZ5" kind="relationship" relationship="viewControllers" id="Xei-Op-H1Y"/>
+                        <segue destination="Xjb-3J-BZ5" kind="relationship" relationship="viewControllers" id="SbH-k8-JdD"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MfM-Sz-cSB" userLabel="First Responder" sceneMemberID="firstResponder"/>
