--- a/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
+++ b/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Nc2-BK-DNv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1004" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Nc2-BK-DNv">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -32,8 +32,8 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="yGe-mb-WbW" firstAttribute="top" secondItem="APZ-sO-1ou" secondAttribute="top" id="B0d-RI-naq"/>
-                            <constraint firstItem="e43-8T-pBD" firstAttribute="top" secondItem="yGe-mb-WbW" secondAttribute="bottom" id="PEQ-9M-qdi"/>
                             <constraint firstItem="yGe-mb-WbW" firstAttribute="leading" secondItem="APZ-sO-1ou" secondAttribute="leading" id="jvW-5x-VjB"/>
+                            <constraint firstAttribute="bottom" secondItem="yGe-mb-WbW" secondAttribute="bottom" id="m8N-b1-P9a"/>
                             <constraint firstAttribute="trailing" secondItem="yGe-mb-WbW" secondAttribute="trailing" id="sci-sA-W52"/>
                         </constraints>
                     </view>
